Added tech notes on Java